[package]
name = "dynatask"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
rand = "0.9.2"
tokio = { version = "1.49", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
chrono = { version = "0.4.43", default-features = false, features = ["std", "now"] }
flate2 = { version = "1.1" }
redis = { version = "0.32.7", default-features = false, features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tracing-subscriber = "0.3.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
