[package]
name = "dynatask"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tokio = { version = "1.49", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
fastrand = "2"
chrono = { version = "0.4.43", default-features = false, features = ["std", "now"] }
flate2 = { version = "1.1" }
redis = { version = "1.0", default-features = false, features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
