[package]
name = "dynatask"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tokio = { version = "1.52", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
fastrand = "2"
chrono = { version = "0.4.45", default-features = false, features = ["std", "now"] }
flate2 = { version = "1.1" }
redis = { version = "1.2", default-features = false, features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
large_types_passed_by_value = "warn"
large_stack_arrays = "warn"
await_holding_lock = "warn"
